# GKOS-Engine-Lite

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  desktop-build.yml
desktop/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
desktop/docs/: QUICKSTART.md  USER-GUIDE.md
desktop/src/: main.ts  settings-schema.ts  snippets.ts  status.ts  strings.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/test/: settings.test.mjs  snippets.test.mjs
scripts/: build-engine.mjs
test/: divergence-backport.test.mjs  kosmos-projection-options.test.mjs  pass-through.test.mjs  symlink-invocation.test.mjs
test/fixtures/notes/: alpha.md  beta.md
