[package]
name = "gkos-engine-desktop"
version = "0.1.0"
description = "GKOS Engine Desktop — Tauri 2 tray shell"
authors = ["OdenKnight"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "gkos_engine_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[features]
# Tauri custom-protocol is enabled in release bundles.
custom-protocol = ["tauri/custom-protocol"]
